Recorded the benchmark baseline and calibration facts in the performance note